kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tmp2-edustories
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tmp2-edustories
  template:
    metadata:
      labels:
        app: tmp2-edustories
    spec:
      securityContext:                                                          
        runAsUser: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
        - name: ghcr-secret
      containers:      
      - name: edustories-be-staging
        image: ghcr.io/noltio/edustories-be:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 3275
        volumeMounts:
        - name: config-volume
          mountPath: /usr/local/config.yml
          subPath: config.yml
        - name: tmp
          mountPath: /tmp
      - name: edustories-whisper
        image: ghcr.io/edumuni/speech2text-api:latest
        resources:
          requests:
            memory: "2Gi"
            cpu: "2"
          limits:
            memory: "4Gi"
            cpu: "2"
#        command:
#          - /bin/bash
#          - -c
#          - "speech2text-api httpapi --host 0.0.0.0 --port 5000"
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 5000
      volumes:
        - name: config-volume
          secret:
            secretName: app-secret-config-edustories-staging
            items:
              - key: config.yml
                path: config.yml
        - name: tmp
          emptyDir: {}
